// --------------------------------------------------------------------------------
// SPDX-FileCopyrightText: 2024-2025 Martin Jan KÃ¶hler and Harald Pretl
// Johannes Kepler University, Institute for Integrated Circuits.
//
// This file is part of KPEX 
// (see https://github.com/iic-jku/klayout-pex).
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.
// SPDX-License-Identifier: GPL-3.0-or-later
// --------------------------------------------------------------------------------
syntax = "proto3";

package kpex.c;

import "kpex/layout/location.proto";
import "kpex/layout/device.proto";
import "kpex/layout/pin.proto";

message OverlapCapacitance {
    message Key {
        string layer_top = 10;
        string net_top = 20;
        string layer_bot = 30;
        string net_bot = 40;
    }

    Key key = 10;
    double capacitance = 20;
}

message SidewallCapacitance {
    message Key {
    }

    Key key = 10;
    double capacitance = 20;
}

message FringeCapacitance {
    message Key {
        string layer_inside = 10;
        string net_inside = 20;
        string layer_outside = 30;
        string net_outside = 40;
    }

    Key key = 10;
    double capacitance = 20;
}
