// --------------------------------------------------------------------------------
// SPDX-FileCopyrightText: 2024-2025 Martin Jan KÃ¶hler and Harald Pretl
// Johannes Kepler University, Institute for Integrated Circuits.
//
// This file is part of KPEX 
// (see https://github.com/iic-jku/klayout-pex).
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.
// SPDX-License-Identifier: GPL-3.0-or-later
// --------------------------------------------------------------------------------
syntax = "proto3";

package kpex.r;

import "kpex/layout/location.proto";
import "kpex/layout/device.proto";
import "kpex/layout/pin.proto";

message RNode {
    enum Kind {
        KIND_UNSPECIFIED = 0;
        KIND_PIN = 1;
        KIND_DEVICE_TERMINAL = 2;
        KIND_WIRE_JUNCTION = 3;
        KIND_VIA_JUNCTION = 4;
    }

    message Via {}
    message WireJunction {}

    uint64 node_id = 10;
    string node_name = 20;
    Kind node_kind = 30;
    string layer_name = 40;
    string net_name = 50;
    kpex.layout.Location location = 60;

    oneof parameters {
        kpex.layout.Pin pin = 90;
        kpex.layout.Device.Terminal device_terminal = 91;
        Via via = 92;
        WireJunction wire_junction = 93;
    }
}

message RNodeRef {
    uint64 node_id = 1;
}

message RElement {
    uint64 element_id = 1;
    RNodeRef node_a = 20;
    RNodeRef node_b = 30;
    double resistance = 40; // in ohm
}

message RNetwork {
    string net_name = 1;
    repeated RNode nodes = 20;
    repeated RElement elements = 30;
}
